; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_restrack.c_rdma_restrack_attach_task.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_restrack.c_rdma_restrack_attach_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rdma_restrack_entry = type { %struct.task_struct* }
%struct.task_struct = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rdma_restrack_attach_task(%struct.rdma_restrack_entry* %0, %struct.task_struct* %1) #0 {
  %3 = alloca %struct.rdma_restrack_entry*, align 8
  %4 = alloca %struct.task_struct*, align 8
  store %struct.rdma_restrack_entry* %0, %struct.rdma_restrack_entry** %3, align 8
  store %struct.task_struct* %1, %struct.task_struct** %4, align 8
  %5 = load %struct.rdma_restrack_entry*, %struct.rdma_restrack_entry** %3, align 8
  %6 = getelementptr inbounds %struct.rdma_restrack_entry, %struct.rdma_restrack_entry* %5, i32 0, i32 0
  %7 = load %struct.task_struct*, %struct.task_struct** %6, align 8
  %8 = icmp ne %struct.task_struct* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.rdma_restrack_entry*, %struct.rdma_restrack_entry** %3, align 8
  %11 = getelementptr inbounds %struct.rdma_restrack_entry, %struct.rdma_restrack_entry* %10, i32 0, i32 0
  %12 = load %struct.task_struct*, %struct.task_struct** %11, align 8
  %13 = call i32 @put_task_struct(%struct.task_struct* %12)
  br label %14

14:                                               ; preds = %9, %2
  %15 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %16 = call i32 @get_task_struct(%struct.task_struct* %15)
  %17 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %18 = load %struct.rdma_restrack_entry*, %struct.rdma_restrack_entry** %3, align 8
  %19 = getelementptr inbounds %struct.rdma_restrack_entry, %struct.rdma_restrack_entry* %18, i32 0, i32 0
  store %struct.task_struct* %17, %struct.task_struct** %19, align 8
  ret void
}

declare dso_local i32 @put_task_struct(%struct.task_struct*) #1

declare dso_local i32 @get_task_struct(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
